dparse_tables.h

#define SCANNER_BLOCKS_POW2 2
#define SCANNER_BLOCKS (1 << SCANNER_BLOCKS_POW2)
#define SCANNER_BLOCK_SHIFT (8 - SCANNER_BLOCKS_POW2)
#define SCANNER_BLOCK_MASK ((1 << SCANNER_BLOCK_SHIFT) - 1)
#define SCANNER_BLOCK_SIZE (256 / SCANNER_BLOCKS)
struct D_Parser;
struct D_ShiftTable;
typedef struct d_loc_t {
  char *s, *pathname, *ws;
  int col, line;
} d_loc_t;
typedef void (*D_WhiteSpaceFn)(struct D_Parser *p, d_loc_t *loc, void **p_globals);
typedef int (*D_ScanCode)(d_loc_t *loc, unsigned short *symbol, int *term_priority, unsigned char *op_assoc,
                          int *op_priority);
typedef int (*D_ReductionCode)(void *new_ps, void **children, int n_children, int pn_offset, struct D_Parser *parser);
typedef struct D_Reduction {
  unsigned short nelements;
  unsigned short symbol;
  D_ReductionCode speculative_code;
  D_ReductionCode final_code;
  unsigned short op_assoc;
  unsigned short rule_assoc;
  int op_priority;
  int rule_priority;
  int action_index;
  int npass_code;
  D_ReductionCode *pass_code;
} D_Reduction;
typedef struct D_RightEpsilonHint {
  unsigned short depth;
  unsigned short preceeding_state;
  D_Reduction *reduction;
} D_RightEpsilonHint;
typedef struct D_ErrorRecoveryHint {
  unsigned short depth;
  unsigned short symbol;
  const char *string;
} D_ErrorRecoveryHint;
#define D_SCAN_ALL 0
#define D_SCAN_LONGEST 1
#define D_SCAN_MIXED 2
#define D_SCAN_TRAILING 3
#define D_SCAN_RESERVED 4
#define D_SCAN_DEFAULT D_SCAN_ALL
#define D_SYMBOL_NTERM 1
#define D_SYMBOL_INTERNAL 2
#define D_SYMBOL_EBNF 3
#define D_SYMBOL_STRING 4
#define D_SYMBOL_REGEX 5
#define D_SYMBOL_CODE 6
#define D_SYMBOL_TOKEN 7
#define D_PASS_PRE_ORDER 0x0001
#define D_PASS_POST_ORDER 0x0002
#define D_PASS_MANUAL 0x0004
#define D_PASS_FOR_ALL 0x0008
#define D_PASS_FOR_UNDEFINED 0x0010