dparse.h

struct D_Parser;
struct D_Scope;
typedef void (*D_SyntaxErrorFn)(struct D_Parser *);
typedef struct D_ParseNode *(*D_AmbiguityFn)(struct D_Parser *, int n, struct D_ParseNode **v);
typedef void (*D_FreeNodeFn)(struct D_ParseNode *d);
typedef struct D_Parser {
  D_ParseNode_Globals *initial_globals; /* global values */
  D_WhiteSpaceFn initial_white_space_fn;
  struct D_Scope *initial_scope;
  D_SyntaxErrorFn syntax_error_fn;
  D_AmbiguityFn ambiguity_fn;
  D_FreeNodeFn free_node_fn;
  d_loc_t loc;     /* initial location, set on error */
  int start_state; /* do not move or change without fixing copy_user_configurables() */
  /* user configurables */
  int sizeof_user_parse_node;
  int save_parse_tree;
  int dont_compare_stacks;
  int dont_fixup_internal_productions;
  int fixup_EBNF_productions;
  int dont_merge_epsilon_trees;
  int dont_use_height_for_disambiguation;
  int dont_use_greediness_for_disambiguation;
  int dont_use_deep_priorities_for_disambiguation;
  int commit_actions_interval; /* 0 is immediate */
  int error_recovery;
  int partial_parses;
  /* parse results */
  int syntax_errors; /* do not move or change without fixing copy_user_configurables() */
} D_Parser;