rust/dparser_lib/src/bindings.rs

/* automatically generated by rust-bindgen 0.71.1 */

#![allow(
    non_upper_case_globals,
    non_camel_case_types,
    non_snake_case,
    dead_code
)]

#[repr(C)]
#[derive(Copy, Clone, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd)]
pub struct __BindgenBitfieldUnit<Storage> {
    storage: Storage,
}
impl<Storage> __BindgenBitfieldUnit<Storage> {
    #[inline]
    pub const fn new(storage: Storage) -> Self {
        Self { storage }
    }
}
impl<Storage> __BindgenBitfieldUnit<Storage>
where
    Storage: AsRef<[u8]> + AsMut<[u8]>,
{
    #[inline]
    fn extract_bit(byte: u8, index: usize) -> bool {
        let bit_index = if cfg!(target_endian = "big") {
            7 - (index % 8)
        } else {
            index % 8
        };
        let mask = 1 << bit_index;
        byte & mask == mask
    }
    #[inline]
    pub fn get_bit(&self, index: usize) -> bool {
        debug_assert!(index / 8 < self.storage.as_ref().len());
        let byte_index = index / 8;
        let byte = self.storage.as_ref()[byte_index];
        Self::extract_bit(byte, index)
    }
    #[inline]
    pub fn raw_get_bit(this: *const Self, index: usize) -> bool {
        debug_assert!(index / 8 < core::mem::size_of::<Storage>());
        unsafe {
            let byte_index = index / 8;
            let byte =
                *(core::ptr::addr_of!((*this).storage) as *const u8).offset(byte_index as isize);
            Self::extract_bit(byte, index)
        }
    }
    #[inline]
    fn change_bit(byte: u8, index: usize, val: bool) -> u8 {
        let bit_index = if cfg!(target_endian = "big") {
            7 - (index % 8)
        } else {
            index % 8
        };
        let mask = 1 << bit_index;
        if val {
            byte | mask
        } else {
            byte & !mask
        }
    }
    #[inline]
    pub fn set_bit(&mut self, index: usize, val: bool) {
        debug_assert!(index / 8 < self.storage.as_ref().len());
        let byte_index = index / 8;
        let byte = &mut self.storage.as_mut()[byte_index];
        *byte = Self::change_bit(*byte, index, val);
    }
    #[inline]
    pub fn raw_set_bit(this: *mut Self, index: usize, val: bool) {
        debug_assert!(index / 8 < core::mem::size_of::<Storage>());
        unsafe {
            let byte_index = index / 8;
            let byte =
                (core::ptr::addr_of_mut!((*this).storage) as *mut u8).offset(byte_index as isize);
            *byte = Self::change_bit(*byte, index, val);
        }
    }
    #[inline]
    pub fn get(&self, bit_offset: usize, bit_width: u8) -> u64 {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < self.storage.as_ref().len());
        debug_assert!((bit_offset + (bit_width as usize)) / 8 <= self.storage.as_ref().len());
        let mut val = 0;
        for i in 0..(bit_width as usize) {
            if self.get_bit(i + bit_offset) {
                let index = if cfg!(target_endian = "big") {
                    bit_width as usize - 1 - i
                } else {
                    i
                };
                val |= 1 << index;
            }
        }
        val
    }
    #[inline]
    pub unsafe fn raw_get(this: *const Self, bit_offset: usize, bit_width: u8) -> u64 {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < core::mem::size_of::<Storage>());
        debug_assert!((bit_offset + (bit_width as usize)) / 8 <= core::mem::size_of::<Storage>());
        let mut val = 0;
        for i in 0..(bit_width as usize) {
            if Self::raw_get_bit(this, i + bit_offset) {
                let index = if cfg!(target_endian = "big") {
                    bit_width as usize - 1 - i
                } else {
                    i
                };
                val |= 1 << index;
            }
        }
        val
    }
    #[inline]
    pub fn set(&mut self, bit_offset: usize, bit_width: u8, val: u64) {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < self.storage.as_ref().len());
        debug_assert!((bit_offset + (bit_width as usize)) / 8 <= self.storage.as_ref().len());
        for i in 0..(bit_width as usize) {
            let mask = 1 << i;
            let val_bit_is_set = val & mask == mask;
            let index = if cfg!(target_endian = "big") {
                bit_width as usize - 1 - i
            } else {
                i
            };
            self.set_bit(index + bit_offset, val_bit_is_set);
        }
    }
    #[inline]
    pub unsafe fn raw_set(this: *mut Self, bit_offset: usize, bit_width: u8, val: u64) {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < core::mem::size_of::<Storage>());
        debug_assert!((bit_offset + (bit_width as usize)) / 8 <= core::mem::size_of::<Storage>());
        for i in 0..(bit_width as usize) {
            let mask = 1 << i;
            let val_bit_is_set = val & mask == mask;
            let index = if cfg!(target_endian = "big") {
                bit_width as usize - 1 - i
            } else {
                i
            };
            Self::raw_set_bit(this, index + bit_offset, val_bit_is_set);
        }
    }
}
pub const SCANNER_BLOCKS_POW2: u32 = 2;
pub const SCANNER_BLOCKS: u32 = 4;
pub const SCANNER_BLOCK_SHIFT: u32 = 6;
pub const SCANNER_BLOCK_MASK: u32 = 63;
pub const SCANNER_BLOCK_SIZE: u32 = 64;
pub const D_SCAN_ALL: u32 = 0;
pub const D_SCAN_LONGEST: u32 = 1;
pub const D_SCAN_MIXED: u32 = 2;
pub const D_SCAN_TRAILING: u32 = 3;
pub const D_SCAN_RESERVED: u32 = 4;
pub const D_SCAN_DEFAULT: u32 = 0;
pub const D_SYMBOL_NTERM: u32 = 1;
pub const D_SYMBOL_INTERNAL: u32 = 2;
pub const D_SYMBOL_EBNF: u32 = 3;
pub const D_SYMBOL_STRING: u32 = 4;
pub const D_SYMBOL_REGEX: u32 = 5;
pub const D_SYMBOL_CODE: u32 = 6;
pub const D_SYMBOL_TOKEN: u32 = 7;
pub const D_PASS_PRE_ORDER: u32 = 1;
pub const D_PASS_POST_ORDER: u32 = 2;
pub const D_PASS_MANUAL: u32 = 4;
pub const D_PASS_FOR_ALL: u32 = 8;
pub const D_PASS_FOR_UNDEFINED: u32 = 16;
pub const D_SCOPE_INHERIT: u32 = 0;
pub const D_SCOPE_RECURSIVE: u32 = 1;
pub const D_SCOPE_PARALLEL: u32 = 2;
pub const D_SCOPE_SEQUENTIAL: u32 = 3;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_ShiftTable {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct d_loc_t {
    pub s: *mut ::std::os::raw::c_char,
    pub pathname: *mut ::std::os::raw::c_char,
    pub ws: *mut ::std::os::raw::c_char,
    pub col: ::std::os::raw::c_int,
    pub line: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of d_loc_t"][::std::mem::size_of::<d_loc_t>() - 32usize];
    ["Alignment of d_loc_t"][::std::mem::align_of::<d_loc_t>() - 8usize];
    ["Offset of field: d_loc_t::s"][::std::mem::offset_of!(d_loc_t, s) - 0usize];
    ["Offset of field: d_loc_t::pathname"][::std::mem::offset_of!(d_loc_t, pathname) - 8usize];
    ["Offset of field: d_loc_t::ws"][::std::mem::offset_of!(d_loc_t, ws) - 16usize];
    ["Offset of field: d_loc_t::col"][::std::mem::offset_of!(d_loc_t, col) - 24usize];
    ["Offset of field: d_loc_t::line"][::std::mem::offset_of!(d_loc_t, line) - 28usize];
};
pub type D_WhiteSpaceFn = ::std::option::Option<
    unsafe extern "C" fn(
        p: *mut D_Parser,
        loc: *mut d_loc_t,
        p_globals: *mut *mut ::std::os::raw::c_void,
    ),
>;
pub type D_ScanCode = ::std::option::Option<
    unsafe extern "C" fn(
        loc: *mut d_loc_t,
        symbol: *mut ::std::os::raw::c_ushort,
        term_priority: *mut ::std::os::raw::c_int,
        op_assoc: *mut ::std::os::raw::c_uchar,
        op_priority: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int,
>;
pub type D_ReductionCode = ::std::option::Option<
    unsafe extern "C" fn(
        new_ps: *mut ::std::os::raw::c_void,
        children: *mut *mut ::std::os::raw::c_void,
        n_children: ::std::os::raw::c_int,
        pn_offset: ::std::os::raw::c_int,
        parser: *mut D_Parser,
    ) -> ::std::os::raw::c_int,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_Reduction {
    pub nelements: ::std::os::raw::c_ushort,
    pub symbol: ::std::os::raw::c_ushort,
    pub speculative_code: D_ReductionCode,
    pub final_code: D_ReductionCode,
    pub op_assoc: ::std::os::raw::c_ushort,
    pub rule_assoc: ::std::os::raw::c_ushort,
    pub op_priority: ::std::os::raw::c_int,
    pub rule_priority: ::std::os::raw::c_int,
    pub action_index: ::std::os::raw::c_int,
    pub npass_code: ::std::os::raw::c_int,
    pub pass_code: *mut D_ReductionCode,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of D_Reduction"][::std::mem::size_of::<D_Reduction>() - 56usize];
    ["Alignment of D_Reduction"][::std::mem::align_of::<D_Reduction>() - 8usize];
    ["Offset of field: D_Reduction::nelements"]
        [::std::mem::offset_of!(D_Reduction, nelements) - 0usize];
    ["Offset of field: D_Reduction::symbol"][::std::mem::offset_of!(D_Reduction, symbol) - 2usize];
    ["Offset of field: D_Reduction::speculative_code"]
        [::std::mem::offset_of!(D_Reduction, speculative_code) - 8usize];
    ["Offset of field: D_Reduction::final_code"]
        [::std::mem::offset_of!(D_Reduction, final_code) - 16usize];
    ["Offset of field: D_Reduction::op_assoc"]
        [::std::mem::offset_of!(D_Reduction, op_assoc) - 24usize];
    ["Offset of field: D_Reduction::rule_assoc"]
        [::std::mem::offset_of!(D_Reduction, rule_assoc) - 26usize];
    ["Offset of field: D_Reduction::op_priority"]
        [::std::mem::offset_of!(D_Reduction, op_priority) - 28usize];
    ["Offset of field: D_Reduction::rule_priority"]
        [::std::mem::offset_of!(D_Reduction, rule_priority) - 32usize];
    ["Offset of field: D_Reduction::action_index"]
        [::std::mem::offset_of!(D_Reduction, action_index) - 36usize];
    ["Offset of field: D_Reduction::npass_code"]
        [::std::mem::offset_of!(D_Reduction, npass_code) - 40usize];
    ["Offset of field: D_Reduction::pass_code"]
        [::std::mem::offset_of!(D_Reduction, pass_code) - 48usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_RightEpsilonHint {
    pub depth: ::std::os::raw::c_ushort,
    pub preceeding_state: ::std::os::raw::c_ushort,
    pub reduction: *mut D_Reduction,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of D_RightEpsilonHint"][::std::mem::size_of::<D_RightEpsilonHint>() - 16usize];
    ["Alignment of D_RightEpsilonHint"][::std::mem::align_of::<D_RightEpsilonHint>() - 8usize];
    ["Offset of field: D_RightEpsilonHint::depth"]
        [::std::mem::offset_of!(D_RightEpsilonHint, depth) - 0usize];
    ["Offset of field: D_RightEpsilonHint::preceeding_state"]
        [::std::mem::offset_of!(D_RightEpsilonHint, preceeding_state) - 2usize];
    ["Offset of field: D_RightEpsilonHint::reduction"]
        [::std::mem::offset_of!(D_RightEpsilonHint, reduction) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct D_ErrorRecoveryHint {
    pub depth: ::std::os::raw::c_ushort,
    pub symbol: ::std::os::raw::c_ushort,
    pub string: *const ::std::os::raw::c_char,
}
